# 101-rust

./: .gitignore  README.md
bonus-track/lambda-code/: Cargo.toml  build.sh
bonus-track/lambda-code/src/: main.rs
bonus-track/lambda-code/src/helper/: lambda_helper.rs
bonus-track/lambda-code/src/model/: chat_gpt_model.rs  lambda_model.rs
bonus-track/lambda-code/src/service/: chat_gpt_service.rs  sercrets_manager_service.rs
modules/01-basic-syntax/: Cargo.toml
modules/01-basic-syntax/examples/: compound_types.rs  functions.rs  references.rs  slices.rs  types_inference.rs
modules/01-basic-syntax/go/: compound_types.go  functions.go  go.mod  main.go  references.go  scopes_shadowing.go  slices.go  types_inference.go
modules/01-basic-syntax/go/src/modules/: compound_types.go  functions.go  references.go  slices.go
modules/01-basic-syntax/go/src/utils/: utils.go
modules/01-basic-syntax/python/: compound_types.py  functions.py  main.py  references.py  requirements.txt  scopes_shadowing.py  slices.py  types_inference.py
modules/01-basic-syntax/python/src/modules/: compound_types.py  functions.py  references.py  slices.py
modules/01-basic-syntax/python/src/utils/: utils.py
modules/01-basic-syntax/rust/: Cargo.toml
modules/01-basic-syntax/rust/examples/: compound_types.rs  functions.rs  references.rs  scopes_shadowing.rs  slices.rs  types_inference.rs
modules/01-basic-syntax/rust/src/: main.rs
modules/01-basic-syntax/rust/src/modules/: compound_types.rs  functions.rs  mod.rs  (+2 more)
modules/01-basic-syntax/typescript/: compound_types.ts  functions.ts  main.ts  package.json  references.ts  scopes_shadowing.ts  slices.ts  types_inference.ts
modules/03-ownership/: Cargo.toml
modules/03-ownership/examples/: borrowing.rs  copy_clone.rs  lifetime.rs  move_in_functions.rs  move_semantics.rs
modules/04-error-handling/: Cargo.toml
modules/04-error-handling/examples/: deriving.rs  dynamic_errors.rs  errors_context.rs  panics.rs  propagation.rs  structured_error.rs
modules/04-error-handling/src/: main.rs
(+25 files in other folders)
