[package]
name = "chat-gpt-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
lambda_runtime = "0.6.1"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
