[package]
name = "basic-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "compound_types"

[[example]]
name = "references"

[[example]]
name = "slices"

[[example]]
name = "functions"

[[example]]
name = "types_inference"
